testcases/bindgen/175/error_message.txt
error[E0412]: cannot find type `a` in this scope
 --> ./open/175/generated_bindings.rs:9:19
  |
5 | pub struct b {
  | ------------ similarly named struct `b` defined here
...
9 |     pub static c: a;
  |                   ^ help: a struct with a similar name exists: `b`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
